snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/error-0.1.0-20210817.081412-1.module.sha1
ceb422f481c1b3bfdb59c09025ea526c9f98480a